Fixed search toggle jumping to the top of the page

--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -87,3 +87,7 @@
     }
   }
 }
+
+.search-toggle {
+  cursor: pointer;
+}
