--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1138,6 +1138,9 @@ div.comments-area {
   .dark-header .main-navigation i:hover, .dark-header .main-navigation a:hover, .dark-header .main-navigation input, .dark-header .main-navigation input::placeholder {
     color: #f0e4d1; }
 
+.search-toggle {
+  cursor: pointer; }
+
 .widget-area {
   padding-left: 20%;
   padding-top: 6rem;
